# AI-Live-Room

./: .e2e_final.sh  .e2e_p1_full.sh  .e2e_test2.sh  .e2e_test_temp.sh  .gift_test.sh  .gitignore  00_开发规范.md  01_项目架构设计.md  02_网络协议设计.md  03_数据库设计.md  04_核心数据结构设计.md  05_接口统一标准.md  06_弹幕模块设计.md  07_房间模块设计.md  08_敏感词过滤设计.md  09_构建与部署.md  10_性能优化方案.md  11_测试方案.md  12_后期扩展方案.md  13_客户端体系开发文档.md  ENVIRONMENT_SETUP_GUIDE.md  README.md  complete_setup.bat  download_vcpkg.ps1  install_dependencies.bat  nginx-local.conf  package.json  setup_environment.bat  setup_vcpkg.bat  setup_vcpkg_mirror.bat  test_commands.txt  verify_environment.bat
ai开发技能/开发用skills/skills/api-designer/: SKILL.md
ai开发技能/开发用skills/skills/code-reviewer/: SKILL.md
ai开发技能/开发用skills/skills/cpp-pro/: SKILL.md
ai开发技能/开发用skills/skills/debugging-wizard/: SKILL.md
ai开发技能/开发用skills/skills/fastapi-expert/: SKILL.md
ai开发技能/开发用skills/skills/fullstack-developer/: _skillhub_meta.json
ai开发技能/开发用skills/skills/game-developer/: SKILL.md
ai开发技能/开发用skills/skills/prd/: _skillhub_meta.json
ai开发技能/开发用skills/skills/react-native-expert/: SKILL.md
ai开发技能/开发用skills/skills/sql-pro/: SKILL.md
api-server/: .env.example  package-lock.json  package.json  test-server.js
api-server/config/: database.js  sensitive_words.json
api-server/src/: server.js
api-server/src/middleware/: errorHandler.js  healthCheck.js  validate.js
api-server/src/routes/: api.js  health.js  stream.js
api-server/src/services/: database.js  gift.js  rateLimiter.js  redisBridge.js  room.js  sensitiveFilter.js  socket.js  streamService.js  user.js
api-server/tests/: frontend-backend-integration.js  integration-test.js
backend-server/: CMakeLists.txt  run_server.bat  run_tests.bat
backend-server/config/: app-docker.json  app.json  sensitive_words.txt
backend-server/include/common/: callbacks.h  error_code.h  logging.h  result.h
backend-server/include/data/: mysql_pool.h  mysql_repository.h  redis_pool.h  redis_pubsub.h  repository.h
backend-server/include/net/: connection.h  epoll_server.h
backend-server/include/protocol/: message_codec.h  message_dispatcher.h  message_header.h
backend-server/include/service/: danmaku_service.h  filter_service.h
backend-server/include/util/: config_manager.h  thread_pool.h  timer_wheel.h  utils.h
backend-server/src/: main.cpp
backend-server/src/common/: logging.cpp
backend-server/src/data/: mysql_pool.cpp  mysql_repository.cpp  redis_pool.cpp  redis_pubsub.cpp
backend-server/src/net/: connection.cpp  epoll_server.cpp
backend-server/src/protocol/: message_codec.cpp  message_dispatcher.cpp  message_header.cpp
backend-server/src/service/: danmaku_service.cpp  filter_service.cpp
backend-server/src/util/: config_manager.cpp  thread_pool.cpp  timer_wheel.cpp  utils.cpp
backend-server/tests/: test_config.cpp  test_connection.cpp  test_filter.cpp  test_protocol.cpp  test_result.cpp  test_thread_pool.cpp  test_timer_wheel.cpp
chatroom-client/: CMakeLists.txt
chatroom-client/include/: client.h  connection.h  protocol.h
chatroom-client/include/common/: result.h
chatroom-client/src/: client.cpp  connection.cpp  main.cpp  protocol.cpp
chatroom-server/: CMakeLists.txt
chatroom-server/.devcontainer/: devcontainer.json
chatroom-server/config/: app.json
chatroom-server/include/common/: logger.h  result.h
chatroom-server/scripts/: build.bat
chatroom-server/src/: main.cpp
chatroom-server/src/common/: logger.cpp  result.cpp
config/k8s/: chatroom-deployment.yaml
docker/: Dockerfile  daemon.json  dev.bat  dev.sh  docker-compose.yml  fix-docker-final.bat  fix-docker.bat  fix-docker.ps1  install-docker.bat  post-restart.bat  settings.json
docker/init-sql/: 01_init.sql
docs/: AI协作报告.md  ARCHITECTURE_DESIGN.md  BACKEND_RULES.md  BACKEND_TASKS.md  DEVELOPER_RULES.md  FRONTEND_RULES.md  FRONTEND_TASKS.md  OBS_STREAMING_GUIDE.md  README.md  SIMPLE_EMAIL_PROJECT_ROADMAP.md  TECHNICAL_FRAMEWORK.md  USER_GUIDE.md  答辩PPT.md  自我评价与反思.md  邮箱客户端开发.md  部署文档.md
docs/development/: README.md
docs/development/00-master-rules/: MASTER_RULES.md
docs/development/01-backend-gift-system/: RULES.md  TASKS.md  TESTS.md
docs/development/02-frontend-gift-system/: RULES.md  TASKS.md  TESTS.md
docs/development/03-backend-room-crud/: RULES.md  TASKS.md  TESTS.md
docs/development/04-frontend-room-list-video/: RULES.md  TASKS.md  TESTS.md
docs/development/05-backend-rate-limiter/: RULES.md  TASKS.md  TESTS.md
docs/development/06-backend-sensitive-filter/: RULES.md  TASKS.md  TESTS.md
docs/development/07-frontend-danmaku-canvas/: RULES.md  TASKS.md  TESTS.md
docs/development/08-frontend-settings-theme/: RULES.md  TASKS.md  TESTS.md
docs/development/09-electron-packaging/: RULES.md  TASKS.md  TESTS.md
docs/development/10-media-server/: RULES.md  TASKS.md
docs/development/11-cpp-signal-server/: RULES.md  TASKS.md
docs/development/12-function-enhancement/: RULES.md  TASKS.md
docs/development/13-production-hardening/: RULES.md  TASKS.md
frontend/: .env.development  electron-builder.yml  package-lock.json  package.json  vite.config.ts  vite.config.ts.timestamp-1779025986313-78055fb01379f.mjs
frontend/docs/: PRD.md  TECHNICAL.md
frontend/electron/: main.cjs  main.ts  preload.cjs  preload.ts
frontend/src/: App.vue  main.ts  vite-env.d.ts
frontend/src/components/gift/: GiftEffect.vue  GiftItem.vue  GiftPanel.vue  (+1 more)
frontend/src/composables/: useTheme.ts
frontend/src/router/: index.ts
frontend/src/services/: api.ts  whipClient.ts
frontend/src/stores/: gift.ts  room.ts  user.ts
frontend/src/views/: LoginView.vue  RoomListView.vue  RoomView.vue  SettingsView.vue  StudioView.vue
scripts/: generate_words.js  reset-mysql-password.bat
scripts/loadtest/: benchmark.js
srs/: srs.conf
机器人语音包/: G1Arm.cpp  G1Arm.h  TalkAudio.cpp  TalkAudio.h  action_yuyinhuanxing_yoyo_closeai.py  communicate_config.py  communicate_search.py  config.yaml  decrypt_loader.py  encrypt_script.py  jiami.py  jiemi.py  lisence  xuliehao.py  yoyo.launch  yoyo_knowledge.yaml
机器人语音包/前端web/web/: index.html
(+14 files in other folders)
